# IDATT2505

./: .gitattributes
oblig_1/: compile_and_run  firstOpenGlApp  main.cpp
oblig_2/: cube  main.cpp
oblig_3/: CMakeLists.txt  main.cpp  rubics
oblig_4/SolarSystem/: .gitignore
oblig_4/SolarSystem/Assets/: Star.mat  Star.shadergraph  URP.asset
oblig_4/SolarSystem/Assets/Planets/Materials/: 2k_earth_daymap.mat  2k_makemake_fictional.mat  2k_mars.mat  2k_moon.mat  2k_neptune.mat  2k_venus_surface.mat
oblig_4/SolarSystem/Assets/Scenes/: SampleScene.unity
oblig_4/SolarSystem/Assets/Scenes/SampleScene/: Global Volume Profile.asset
oblig_4/SolarSystem/Assets/Scripts/: MeteoriteTowardsStar.cs  Rotation.cs  SolarSystem.cs
oblig_4/SolarSystem/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
